[package]
name = "solana-account-info"
description = "Solana AccountInfo and related definitions."
documentation = "https://docs.rs/solana-account-info"
version = "2.1.0"
rust-version = "1.88.0"
edition = "2021"

[dependencies]
bincode = { version = "1.3.3", optional = true }
serde = { version = "1.0.213", optional = true }
solana-program-error = "=2.1.0"
solana-program-memory = "=2.1.0"
solana-pubkey = { version = "=2.1.0", default-features = false }

[features]
bincode = ["dep:bincode", "dep:serde"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]
